[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[lib]
name = "encryption"
path = "./lib/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["std"] }
secp256k1 = { version = "0.26.0", features = ["serde"] }
aes-gcm = "0.10.1"
blake3 = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
crossbeam-channel = "0.5.6"
num-bigint-dig = { version = "0.8.2", features = ["prime"] }
