[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[lib]
name = "encryption"
path = "./lib/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["std"] }
secp256k1 = { version = "0.27.0", features = ["serde", "recovery"] }
sha3 = "0.10.8"
aes-gcm = "0.10.1"
hex = "0.4.3"
blake3 = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0"
# crossbeam-channel = "0.5.6"
# num-bigint-dig = { version = "0.8.2", features = ["prime"] }
